// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing parameter parsing of openscad scripts testing checkbox.scad: checkbox.scad 1`] = `
[
  {
    "description": "description",
    "group": undefined,
    "name": "Variable",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": true,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing dont_parse_variables.scad: dont_parse_variables.scad 1`] = `
[
  {
    "description": undefined,
    "group": undefined,
    "name": "a",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 6,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "b",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 7.5,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "c",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 8,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing dontUseEmptyCommentAsDescription.scad: dontUseEmptyCommentAsDescription.scad 1`] = `
[
  {
    "description": undefined,
    "group": undefined,
    "name": "testVar",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "testVar2",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 2,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing dropDownBox.scad: dropDownBox.scad 1`] = `
[
  {
    "description": "combo box for number",
    "group": undefined,
    "name": "Numbers",
    "options": [
      {
        "label": undefined,
        "value": 0,
      },
      {
        "label": undefined,
        "value": 1,
      },
      {
        "label": undefined,
        "value": 2,
      },
      {
        "label": undefined,
        "value": 3,
      },
    ],
    "range": undefined,
    "type": "number",
    "value": 2,
  },
  {
    "description": "combo box for number with negative values",
    "group": undefined,
    "name": "NegativeNumbers",
    "options": [
      {
        "label": undefined,
        "value": -3,
      },
      {
        "label": undefined,
        "value": -2,
      },
      {
        "label": undefined,
        "value": -1,
      },
      {
        "label": undefined,
        "value": 0,
      },
    ],
    "range": undefined,
    "type": "number",
    "value": -2,
  },
  {
    "description": "combo box for string",
    "group": undefined,
    "name": "Strings",
    "options": [
      {
        "label": undefined,
        "value": "foo",
      },
      {
        "label": undefined,
        "value": "bar",
      },
      {
        "label": undefined,
        "value": "baz",
      },
    ],
    "range": undefined,
    "type": "string",
    "value": "foo",
  },
  {
    "description": "labeled combo box for numbers",
    "group": undefined,
    "name": "Labeled_values",
    "options": [
      {
        "label": "S",
        "value": 10,
      },
      {
        "label": "M",
        "value": 20,
      },
      {
        "label": "L",
        "value": 30,
      },
    ],
    "range": undefined,
    "type": "number",
    "value": 10,
  },
  {
    "description": "labeled combo box for string",
    "group": undefined,
    "name": "Labeled_value",
    "options": [
      {
        "label": "Small",
        "value": "S",
      },
      {
        "label": "Medium",
        "value": "M",
      },
      {
        "label": "Large",
        "value": "L",
      },
    ],
    "range": undefined,
    "type": "string",
    "value": "S",
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing example1.scad: example1.scad 1`] = `
[
  {
    "description": "A variable which comes first before the tabs",
    "group": undefined,
    "name": "VariableBeforeFirstTab",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1,
  },
  {
    "description": "combo box for number",
    "group": "Drop down box:",
    "name": "Numbers",
    "options": [
      {
        "label": undefined,
        "value": 0,
      },
      {
        "label": undefined,
        "value": 1,
      },
      {
        "label": undefined,
        "value": 2,
      },
      {
        "label": undefined,
        "value": 3,
      },
    ],
    "range": undefined,
    "type": "number",
    "value": 2,
  },
  {
    "description": "combo box for string",
    "group": "Drop down box:",
    "name": "Strings",
    "options": [
      {
        "label": undefined,
        "value": "foo",
      },
      {
        "label": undefined,
        "value": "bar",
      },
      {
        "label": undefined,
        "value": "baz",
      },
    ],
    "range": undefined,
    "type": "string",
    "value": "foo",
  },
  {
    "description": "labeled combo box for numbers",
    "group": "Drop down box:",
    "name": "Labeled_values",
    "options": [
      {
        "label": "L",
        "value": 10,
      },
      {
        "label": "M",
        "value": 20,
      },
      {
        "label": "XL",
        "value": 30,
      },
    ],
    "range": undefined,
    "type": "number",
    "value": 10,
  },
  {
    "description": "labeled combo box for string",
    "group": "Drop down box:",
    "name": "Labeled_value",
    "options": [
      {
        "label": "Small",
        "value": "S",
      },
      {
        "label": "Medium",
        "value": "M",
      },
      {
        "label": "Large",
        "value": "L",
      },
    ],
    "range": undefined,
    "type": "string",
    "value": "S",
  },
  {
    "description": "slider widget for number",
    "group": "Slider",
    "name": "slider",
    "options": undefined,
    "range": {
      "max": 100,
      "min": 10,
    },
    "type": "number",
    "value": 34,
  },
  {
    "description": "step slider for number",
    "group": "Slider",
    "name": "stepSlider",
    "options": undefined,
    "range": {
      "max": 100,
      "min": 0,
      "step": 5,
    },
    "type": "number",
    "value": 2,
  },
  {
    "description": "description",
    "group": "Checkbox",
    "name": "Variable",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": true,
  },
  {
    "description": "spinbox with step size 1",
    "group": "Spinbox",
    "name": "Spinbox",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 5,
  },
  {
    "description": "Text box for vector with more than 4 elements",
    "group": "Textbox",
    "name": "Vector6",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
      44,
      43,
      23,
      23,
    ],
  },
  {
    "description": "Text box for string",
    "group": "Textbox",
    "name": "String",
    "options": undefined,
    "range": undefined,
    "type": "string",
    "value": "hello",
  },
  {
    "description": "Text box for vector with less than or equal to 4 elements",
    "group": "Special vector",
    "name": "Vector1",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 0,
      "step": 2,
    },
    "type": "number[]",
    "value": [
      12,
    ],
  },
  {
    "description": undefined,
    "group": "Special vector",
    "name": "Vector2",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 0,
      "step": 2,
    },
    "type": "number[]",
    "value": [
      12,
      34,
    ],
  },
  {
    "description": undefined,
    "group": "Special vector",
    "name": "Vector3",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 0,
      "step": 2,
    },
    "type": "number[]",
    "value": [
      12,
      34,
      46,
    ],
  },
  {
    "description": undefined,
    "group": "Special vector",
    "name": "Vector4",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 0,
      "step": 2,
    },
    "type": "number[]",
    "value": [
      12,
      34,
      46,
      24,
    ],
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing example2.scad: example2.scad 1`] = `
[
  {
    "description": "Variable which will be treated as \`number\`",
    "group": undefined,
    "name": "x",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1,
  },
  {
    "description": "Variable which will be treated as \`string\`",
    "group": undefined,
    "name": "y",
    "options": undefined,
    "range": undefined,
    "type": "string",
    "value": "a",
  },
  {
    "description": "Variable which will be treated as \`boolean\`",
    "group": undefined,
    "name": "z",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": true,
  },
  {
    "description": "Variable which will be treated as \`number[]\`",
    "group": undefined,
    "name": "xxx",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      1,
      2,
      3,
    ],
  },
  {
    "description": "Variable which will be treated as \`string[]\`",
    "group": undefined,
    "name": "yyy",
    "options": undefined,
    "range": undefined,
    "type": "string[]",
    "value": [
      "a",
      "b",
      "c",
    ],
  },
  {
    "description": "Variable which will be treated as \`boolean[]\`",
    "group": undefined,
    "name": "zzz",
    "options": undefined,
    "range": undefined,
    "type": "boolean[]",
    "value": [
      true,
      false,
      true,
    ],
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing newlineAboveVariable.scad: newlineAboveVariable.scad 1`] = `
[
  {
    "description": undefined,
    "group": undefined,
    "name": "Height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1.5,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "Width_and_Depth",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 3,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing numbers.scad: numbers.scad 1`] = `
[
  {
    "description": undefined,
    "group": undefined,
    "name": "number1",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 0.16,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "number2",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 0.16,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "number3",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 0.16,
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "number4",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 0.16,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing printables-513382.scad: printables-513382.scad 1`] = `
[
  {
    "description": "How high should each segment be?",
    "group": "Shape parameters",
    "name": "segment_heights",
    "options": undefined,
    "range": {
      "max": 2,
      "min": 0,
    },
    "type": "number[]",
    "value": [
      35,
      35,
      35,
      35,
      35,
    ],
  },
  {
    "description": "How wide should each segment be?",
    "group": "Shape parameters",
    "name": "segment_diameters",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      140,
      100,
      120,
      90,
      110,
      90,
    ],
  },
  {
    "description": "The shape of the twig",
    "group": "Shape parameters",
    "name": "twig_shape",
    "options": [
      {
        "label": undefined,
        "value": "circle",
      },
      {
        "label": undefined,
        "value": "square",
      },
      {
        "label": undefined,
        "value": "ellipse",
      },
    ],
    "range": undefined,
    "type": "string",
    "value": "circle",
  },
  {
    "description": "How much should the twigs be twisted?",
    "group": "Shape parameters",
    "name": "twig_twist",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      25,
      25,
      25,
      0,
      25,
    ],
  },
  {
    "description": "How much should the twigs in the counter direction be twisted?",
    "group": "Shape parameters",
    "name": "twig_counter_twist",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      25,
      25,
      25,
      0,
      25,
    ],
  },
  {
    "description": "How thick should a twig be?",
    "group": "Shape parameters",
    "name": "twig_diameter",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 3,
  },
  {
    "description": "How many twigs should there be?",
    "group": "Shape parameters",
    "name": "twig_count",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 25,
  },
  {
    "description": "How many twigs should be in the other direction?",
    "group": "Shape parameters",
    "name": "twig_counter_count",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 25,
  },
  {
    "description": "The height of the top ring",
    "group": "Shape parameters",
    "name": "top_height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 15,
  },
  {
    "description": "The height of the bottom ring",
    "group": "Shape parameters",
    "name": "bottom_height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 5,
  },
  {
    "description": "How big is the thing you want to put in here?",
    "group": "Socket parameters",
    "name": "socket_diameter",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 81,
  },
  {
    "description": undefined,
    "group": "Socket parameters",
    "name": "socket_step_top_offset",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 2,
  },
  {
    "description": undefined,
    "group": "Socket parameters",
    "name": "socket_step_height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 2.5,
  },
  {
    "description": undefined,
    "group": "Socket parameters",
    "name": "socket_step_diameter",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 87,
  },
  {
    "description": "Override the general settings and let the randomizer go wild!",
    "group": "Randomize Parameters",
    "name": "override_values",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": false,
  },
  {
    "description": "The seed for the random number generator.",
    "group": "Randomize Parameters",
    "name": "seed",
    "options": undefined,
    "range": {
      "max": 9999999,
      "min": 1,
      "step": 1,
    },
    "type": "number",
    "value": 1.1,
  },
  {
    "description": "The amount of segments will be chosen between those two numbers.",
    "group": "Randomize Parameters",
    "name": "min_max_segment_count",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      2,
      5,
    ],
  },
  {
    "description": "The height of each segment is between those two numbers.",
    "group": "Randomize Parameters",
    "name": "min_max_heights",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      0,
      180,
    ],
  },
  {
    "description": "Min/max of all the diameters.",
    "group": "Randomize Parameters",
    "name": "min_max_diameters",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      100,
      180,
    ],
  },
  {
    "description": "The amount of twig twist will be between those two numbers.",
    "group": "Randomize Parameters",
    "name": "min_max_twig_twist",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      0,
      180,
    ],
  },
  {
    "description": "Min/max of the twig diameter.",
    "group": "Randomize Parameters",
    "name": "min_max_twig_diameter",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      2,
      20,
    ],
  },
  {
    "description": "The twig count of both twig directions will be between those two numbers.",
    "group": "Randomize Parameters",
    "name": "min_max_twig_count",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      5,
      15,
    ],
  },
  {
    "description": undefined,
    "group": "Quality settings",
    "name": "shell_fn",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 5,
  },
  {
    "description": undefined,
    "group": "Others",
    "name": "show_labels",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": false,
  },
  {
    "description": undefined,
    "group": "Others",
    "name": "show_parameters",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": false,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing printables-682650.scad: printables-682650.scad 1`] = `
[
  {
    "description": "Size of the panel on the x-axis",
    "group": "Basics",
    "name": "length",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 180,
  },
  {
    "description": "Size of the panel on the y-axis",
    "group": "Basics",
    "name": "depth",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 180,
  },
  {
    "description": "Should a backplate be used?",
    "group": "Basics",
    "name": "use_backplate",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": false,
  },
  {
    "description": "Size of a single cube on the x-axis",
    "group": "Cube parameters",
    "name": "cube_length",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 20,
  },
  {
    "description": "Size of a single cube on the y-axis",
    "group": "Cube parameters",
    "name": "cube_depth",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 20,
  },
  {
    "description": "Minimum height of a single cube",
    "group": "Cube parameters",
    "name": "cube_min_height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 5,
  },
  {
    "description": "Maximum height of a single cube",
    "group": "Cube parameters",
    "name": "cube_max_height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 80,
  },
  {
    "description": "Wall thickness of cube",
    "group": "Cube parameters",
    "name": "cube_wall_thickness",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1,
  },
  {
    "description": "Top perimeter thickness",
    "group": "Cube parameters",
    "name": "cube_top_thickness",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 2,
  },
  {
    "description": "Which seed to use? -1 generates a new layout with each generation",
    "group": "Cube parameters",
    "name": "seed_value",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": -1,
  },
  {
    "description": undefined,
    "group": "Hanging holes",
    "name": "use_hanging_holes",
    "options": undefined,
    "range": undefined,
    "type": "boolean",
    "value": true,
  },
  {
    "description": "The thickness of the baseplate where the opening for the screw/nail is",
    "group": "Hanging holes",
    "name": "wall_hole_thickness",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 1,
  },
  {
    "description": "The diameter of the center hole",
    "group": "Hanging holes",
    "name": "wall_hole_center_size",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 7,
  },
  {
    "description": "The diameter of the screw so it can slide along the hanging hole handles",
    "group": "Hanging holes",
    "name": "wall_hole_screw_d",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 3,
  },
  {
    "description": "The thickness of the head of the screw, so it will fit behind the hole",
    "group": "Hanging holes",
    "name": "wall_screw_head_size",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 3,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing slider.scad: slider.scad 1`] = `
[
  {
    "description": "slider widget for number with max. value",
    "group": undefined,
    "name": "sliderWithMax",
    "options": undefined,
    "range": {
      "max": 50,
    },
    "type": "number",
    "value": 34,
  },
  {
    "description": "slider widget for number in range",
    "group": undefined,
    "name": "sliderWithRange",
    "options": undefined,
    "range": {
      "max": 100,
      "min": 10,
    },
    "type": "number",
    "value": 34,
  },
  {
    "description": "step slider for number",
    "group": undefined,
    "name": "stepSlider",
    "options": undefined,
    "range": {
      "max": 100,
      "min": 0,
      "step": 5,
    },
    "type": "number",
    "value": 2,
  },
  {
    "description": "slider widget for number in range",
    "group": undefined,
    "name": "sliderCentered",
    "options": undefined,
    "range": {
      "max": 10,
      "min": -10,
      "step": 0.1,
    },
    "type": "number",
    "value": 0,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing specialChars.scad: specialChars.scad 1`] = `
[
  {
    "description": undefined,
    "group": "Settings",
    "name": "$fn",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 200,
  },
  {
    "description": undefined,
    "group": "Settings",
    "name": "width",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 30,
  },
  {
    "description": undefined,
    "group": "Settings",
    "name": "length",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 50,
  },
  {
    "description": undefined,
    "group": "Hidden",
    "name": "height",
    "options": undefined,
    "range": undefined,
    "type": "number",
    "value": 10,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing specialVector.scad: specialVector.scad 1`] = `
[
  {
    "description": "Spin box box for vector with less than or equal to 4 elements",
    "group": undefined,
    "name": "Vector2",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
    ],
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "Vector3",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
      45,
    ],
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "Vector4",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
      45,
      23,
    ],
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "VectorRange3",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 1,
      "step": 2,
    },
    "type": "number[]",
    "value": [
      12,
      34,
      46,
    ],
  },
  {
    "description": undefined,
    "group": undefined,
    "name": "VectorRange4",
    "options": undefined,
    "range": {
      "max": 50,
      "min": 1,
    },
    "type": "number[]",
    "value": [
      12,
      34,
      45,
      23,
    ],
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing spinbox.scad: spinbox.scad 1`] = `
[
  {
    "description": "spinbox with step size 0.5",
    "group": undefined,
    "name": "Spinbox",
    "options": undefined,
    "range": {
      "step": 0.5,
    },
    "type": "number",
    "value": 5.5,
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing splitAfterFunction.scad: splitAfterFunction.scad 1`] = `
[
  {
    "description": "Text box for vector with more than 4 elements",
    "group": undefined,
    "name": "Vector6",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
      44,
      43,
      23,
      23,
    ],
  },
  {
    "description": "Text box for string with length 8",
    "group": undefined,
    "name": "String",
    "options": undefined,
    "range": {
      "max": 8,
    },
    "type": "string",
    "value": "length",
  },
]
`;

exports[`testing parameter parsing of openscad scripts testing testbox.scad: testbox.scad 1`] = `
[
  {
    "description": "Text box for vector with more than 4 elements",
    "group": undefined,
    "name": "Vector6",
    "options": undefined,
    "range": undefined,
    "type": "number[]",
    "value": [
      12,
      34,
      44,
      43,
      23,
      23,
    ],
  },
  {
    "description": "Text box for string with length 8",
    "group": undefined,
    "name": "String",
    "options": undefined,
    "range": {
      "max": 8,
    },
    "type": "string",
    "value": "length",
  },
]
`;
